fix overflow on skyline

--- a/assets/sass/_partials/_skyline.scss
+++ b/assets/sass/_partials/_skyline.scss
@@ -2,8 +2,8 @@
 .skyline {
     width: calc(100% + 1px);
     position: absolute;
-    left: -1;
-    right: 1;
+    left: -1px;
+    right: 1px;
     bottom: -1px;
     height: 650px;
     overflow-x: hidden;
